# ptipython-metapackage

./: .gitignore  LICENSE  Makefile  README.md  checker.py  pyproject.toml
.github/workflows/: release.yml
tests/: test_bump_metapackage_version.py  test_compare_versions.py
